
Jan 21, 2016 - chris ---------------------------------------------------
o issue #66: return with error if a database is modified by a committed
	transaction which was not yet flushed to disk (thanks, Balazs Bamer) 

Jan 21, 2016 - chris ---------------------------------------------------
o issue #67: fixed broken installation path and other "ham"/"hamsterdb"
	references (thanks, Wouter Hager)

Jan 13, 2016 - chris ---------------------------------------------------
o issue #64: fixed segfault when recovering a database with a custom
    compare function; deprecated ups_db_set_compare_func

Nov 13, 2015 - chris ---------------------------------------------------
o Now restoring the "active blob page" after recovery to reduce the
    file size.

Nov 09, 2015 - chris ---------------------------------------------------
o UPS_ENABLE_RECOVERY is now an alias for UPS_ENABLE_TRANSACTIONS

Nov 06, 2015 - chris ---------------------------------------------------
o issue #55: correctly handling error condition if mmap fails

Nov 05, 2015 - chris ---------------------------------------------------
o issue #60: files are now truncated after a database was deleted with
    ups_env_erase_db (thanks, vevova)

Oct 17, 2015 - chris ---------------------------------------------------
                      release of upscaledb-2.1.12

Oct 05, 2015 - chris ---------------------------------------------------
o Removed support for MSVC 2010

Oct 02, 2015 - chris ---------------------------------------------------
o Enabled use of integer compression for duplicate keys
o Removed lzo compression
o Removed configure option --disable-compression; compression is now
    always enabled
o UPS_ENABLE_RECOVERY/HAM_ENABLE_RECOVERY is now deprecated, use
    UPS_ENABLE_TRANSACTIONS instead

Oct 01, 2015 - chris ---------------------------------------------------
o Remote URL identifier ham:// was changed to ups://

Sep 29, 2015 - chris ---------------------------------------------------